# dtrace2babeltrace

./: README.md  autogen.sh  configure.ac
src/plugins/: Makefile.am
src/plugins/db/: Makefile.am  plugin.c
src/plugins/db/influxdb/: Makefile.am  influx.cxx  influx.h
src/plugins/db/influxdb/influxdb-cxx/include/: Point.h
src/plugins/db/influxdb/influxdb-cxx/src/: Makefile.am  Point.cxx
src/plugins/dtrace/: Makefile.am  plugin.c
src/plugins/dtrace/kafka-src/: Makefile.am  bbuf.c  bbuf.h  dof.c  dof.h  dof2ctf.c  dof2ctf.h  dtrace_dof.h  kafka.c  kafka.h  kafka_component.c  kafka_component.h  kafka_metadata.c  kafka_metadata.h  kafka_msg_iter.c  kafka_msg_iter.h  kafka_stream_iter.c  kafka_stream_iter.h  kafka_trace.c  kafka_trace.h
src/plugins/dtrace/kafka-src/ctf-writer/: Makefile.am  event-class.c  stream-class.c  stream-class.h  trace.c  writer.c
src/plugins/opentracing/: Makefile.am  plugin.c
src/plugins/opentracing/jaeger/: Makefile.am  jaegertracing.cxx  jaegertracing.h
