libbabeltrace2_plugin_ctf_writer_la_SOURCES = \
	assert-pre.h \
	attributes.c \
	attributes.h \
	clock.c \
	clock-class.c \
	clock-class.h \
	clock.h \
	event.c \
	event-class.c \
	event-class.h \
	event.h \
	field-path.c \
	field-path.h \
	fields.c \
	fields.h \
	field-types.c \
	field-types.h \
	field-wrapper.c \
	field-wrapper.h \
	functor.c \
	functor.h \
	logging.c \
	logging.h \
	object.c \
	object.h \
	object-pool.c \
	object-pool.h \
	resolve.c \
	resolve.h \
	stream.c \
	stream-class.c \
	stream-class.h \
	stream.h \
	trace.c \
	trace.h \
	utils.c \
	utils.h \
	validation.c \
	validation.h \
	values.c \
	values.h \
	visitor.c \
	visitor.h \
	writer.c \
	writer.h

noinst_LTLIBRARIES = libbabeltrace2-plugin-ctf-writer.la

libbabeltrace2_plugin_ctf_writer_la_CFLAGS = \
	$(AM_CFLAGS) \
	-I$(BABELTRACE_SOURCE_DIR)/include \
	-I$(BABELTRACE_SOURCE_DIR)/src \
	-I$(BABELTRACE_SOURCE_DIR)/src/logging \
	-I/usr/include/glib-2.0 \
	-I/usr/lib/x86_64-linux-gnu/glib-2.0/include

